<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height ="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:weightSum="100">
    <LinearLayout
        android:id="@+id/show_quran_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:src="@mipmap/ic_settings_show_quran"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/show_quran"
                style="@style/bold_title"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:text="@string/show_quran_sub">

            </TextView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/play_sound_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:src="@mipmap/ic_settings_audio"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>

            <TextView
                style="@style/bold_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:text="@string/play_sound"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:text="@string/play_sound_sub">

            </TextView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/display_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:src="@mipmap/ic_drawer_display_settings"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/display"
                style="@style/bold_title"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:text="@string/display_sub">

            </TextView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
    android:id="@+id/about_settings"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="10"
    android:weightSum="100"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:src="@mipmap/ic_drawer_info"
        android:layout_gravity="center">

    </ImageView>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:weightSum="100"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="24"
            android:visibility="invisible">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="0dp"
            android:text="@string/about"
            style="@style/bold_title"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="36"
            android:text="@string/about_sub">

        </TextView>

    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:id="@+id/share_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:src="@mipmap/ic_drawer_khatm"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/share"
                style="@style/bold_title"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:text="@string/share_sub">

            </TextView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>