<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <LinearLayout
        android:id="@+id/arabi_ghalam_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/ghalam_arabi"
                style="@style/bold_title"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:text="@string/ghalam_arabi_sub">

            </TextView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/farsi_ghalam_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/ghalam_farsi"
                style="@style/bold_title"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:text="@string/ghalam_farsi_sub">

            </TextView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_tarjome_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>


        </LinearLayout>
        <CheckBox
            android:layout_width="match_parent"
            android:padding="20sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/show_tarjome_checked"
            android:text="@string/show_tarjome"
            style="@style/bold_title"
            android:checked="true"
            android:textDirection="rtl"
            android:layoutDirection="ltr">
        </CheckBox>
    </LinearLayout>


</LinearLayout>