<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SuraListActivity"
    android:layoutDirection="ltr"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tartil_or_tahdir"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tartil"/>
        <TextView
            android:id="@+id/show_favorite_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/favorite"/>
        <TextView
            android:id="@+id/joz_or_hezb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/joz"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layoutDirection="rtl"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nozol_sort_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nozol"
                android:paddingRight="10sp"
                android:layout_gravity="center"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/nozol_accender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ab_up_deactive_arrow"
                    />
                <ImageView
                    android:id="@+id/nozol_deccender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ab_down_deactive_arrow"
                    />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layoutDirection="rtl">
            <TextView
                android:id="@+id/name_sort_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sura_name"
                android:paddingRight="10sp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/name_accender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ab_up_deactive_arrow"
                    />
                <ImageView
                    android:id="@+id/name_deccender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ab_down_deactive_arrow"
                    />
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layoutDirection="rtl">
            <TextView
                android:id="@+id/id_sort_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/number_sura"
                android:paddingRight="10sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layoutDirection="rtl"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layoutDirection="rtl">
                <ImageView
                    android:id="@+id/id_accender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ab_up_deactive_arrow"
                    />
                <ImageView
                    android:id="@+id/id_deccender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_ab_down_deactive_arrow"
                    />
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSuras"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="92"/>

</LinearLayout>