<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">
    <LinearLayout
        android:id="@+id/font_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/font"
                style="@style/bold_title"
                ></TextView>
            <TextView
                android:id="@+id/sub_current_font"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="36"
                android:text="B Nazanin">

            </TextView>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
    android:id="@+id/color_settings"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="10"
    android:weightSum="100"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:visibility="invisible"
        android:layout_gravity="center">

    </ImageView>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:weightSum="100"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="24"
            android:visibility="invisible">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="0dp"
            android:text="@string/color"
            android:gravity="center"
            style="@style/bold_title"
            ></TextView>

    </LinearLayout>
    <View
        android:id="@+id/color_present"
        android:layout_width="25sp"
        android:layout_height="25sp"
        android:layout_gravity="center"
        android:background="#FF000000">

    </View>
</LinearLayout>
    <LinearLayout
        android:id="@+id/color_settings_erab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:weightSum="100"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="24"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/color_erab"
                android:gravity="center"
                style="@style/bold_title"
                ></TextView>

        </LinearLayout>
        <View
            android:id="@+id/color_present_erab"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center"
            android:background="#FF000000">

        </View>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:visibility="invisible"
            android:layout_gravity="center">

        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:weightSum="100"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="28"
                android:visibility="invisible">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_weight="40"
                android:layout_height="0dp"
                android:text="@string/size"
                android:gravity="center"
                style="@style/bold_title"
                ></TextView>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/font_seek_bar"
            android:layout_weight="90"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="100"
            android:min="10"
            android:progress="1"
            android:layout_gravity="center">

        </androidx.appcompat.widget.AppCompatSeekBar>
    </LinearLayout>
    <TextView
        android:id="@+id/font_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:text="فقغقفغفقغ"
        android:layout_gravity="center"
        android:gravity="center">

    </TextView>
</LinearLayout>